# PAR

./: .gitignore  Cargo.toml  README.md
src/: data.rs  file_handler.rs  i_give_up.py  info_win.rs  main.rs  main_win.rs  pixiv_handler.rs  settings_win.rs  ui_globals.rs
