[package]
name = "par"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["image", "png", "jpeg"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
